--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+/* InterVariable Font */
+@font-face {
+  font-family: InterVariable;
+  font-style: normal;
+  font-weight: 100 900;
+  font-display: swap;
+  src: url('InterVariable.woff2') format('woff2');
+}
+
 .custom-class {
   color: lightblue;
 }
